tests/error/arg_res.gw
#! [contains] this is reserved
fun void test(int this){}
